Recommended item view, popular item view, home page, splash screen huge front update

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -28,8 +28,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/philosopher"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Share an inner beauty"
-        android:textColor="@color/black"
+        android:text="&quot;Share an inner beauty&quot;"        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -37,35 +36,46 @@
         app:layout_constraintTop_toBottomOf="@+id/reg_img"
         tools:ignore="MissingConstraints" />
 
+
+
     <EditText
         android:id="@+id/email_reset"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:ems="10"
-        android:hint="Enter Your Email"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/edittext_background"
+        android:gravity="center"
+        android:drawablePadding="13dp"
+        android:elevation="3dp"
+        android:padding="13dp"
+        android:hint="E-mail"
         android:inputType="textEmailAddress"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_share_an_in"
-        />
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_share_an_in"
+        app:layout_constraintWidth_percent=".85" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/resetPassword"
-        android:layout_width="380dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="#222222"
-        android:text="Reset Password"
-        android:fontFamily="@font/lato_bold"
-        android:textColor="#ffffff"
-        android:textSize="21sp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="120dp"
+        android:layout_marginRight="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:elevation="3dp"
+        android:padding="14dp"
+        android:text="Reset"
+        android:textAllCaps="false"
+        android:fontFamily="@font/lato"
+        android:textSize="19sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_reset"
-        />
+        android:textColor="@color/white"
+        android:background="@drawable/ic_login_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_reset" />
 
     <ProgressBar
         android:id="@+id/progressbar"
