--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,8 +28,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/philosopher"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Share an inner beauty"
-        android:textColor="@color/black"
+        android:text="&quot;Share an inner beauty&quot;"        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
