--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,39 +7,39 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.artsell.ui.home.HomeFragment"
+        android:name="com.example.artsell.fragments.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_profile"
-        android:name="com.example.artsell.ui.profile.ProfileFragment"
+        android:name="com.example.artsell.fragments.ProfileFragment"
         android:label="@string/profile"
         tools:layout="@layout/fragment_profile" />
 
     <fragment
         android:id="@+id/nav_category"
-        android:name="com.example.artsell.ui.category.CategoryFragment"
+        android:name="com.example.artsell.fragments.CategoryFragment"
         android:label="@string/category"
         tools:layout="@layout/fragment_category" />
     <fragment
         android:id="@+id/nav_offers"
-        android:name="com.example.artsell.OffersFragment"
+        android:name="com.example.artsell.fragments.OffersFragment"
         android:label="@string/offers"
         tools:layout="@layout/fragment_offers" />
     <fragment
         android:id="@+id/nav_new_products"
-        android:name="com.example.artsell.newProductsFragment"
+        android:name="com.example.artsell.fragments.NewProductsFragment"
         android:label="@string/new_products"
         tools:layout="@layout/fragment_new_products" />
     <fragment
         android:id="@id/nav_my_carts"
-        android:name="com.example.artsell.MyCartsFragment"
+        android:name="com.example.artsell.fragments.MyCartsFragment"
         android:label="@string/my_carts"
         tools:layout="@layout/fragment_my_carts" />
     <fragment
         android:id="@+id/nav_my_orders"
-        android:name="com.example.artsell.myOrdersFragment"
+        android:name="com.example.artsell.fragments.MyOrdersFragment"
         android:label="@string/my_orders"
         tools:layout="@layout/fragment_my_orders" />
 </navigation>
