--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     xmlns:fab="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".activities.MainActivity"
     android:background="@color/colorPrimary"
     >
 
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="0dp"
         android:id="@+id/drawer_layout"
-        tools:context=".MainActivity">
+        tools:context=".activities.MainActivity">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
