--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ECECEC"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".fragments.HomeFragment">
 
     <ProgressBar
         android:id="@+id/progressbar"
@@ -65,19 +65,6 @@
                     android:textSize="25sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/view_all_popular"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="7dp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/lato"
-                    android:gravity="end"
-                    android:text="View All"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -104,19 +91,6 @@
                     android:textColor="#000000"
                     android:textSize="25sp"
                     android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/view_all_explore"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="7dp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/lato"
-                    android:gravity="end"
-                    android:text="View All"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -143,18 +117,6 @@
                     android:textColor="#000000"
                     android:textSize="25sp"
                     android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/view_all_recommended"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="7dp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/lato"
-                    android:gravity="end"
-                    android:text="View All"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
 
             </LinearLayout>
 
