--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -1,72 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     app:cardCornerRadius="15dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
+    <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="250dp"
+        android:orientation="vertical">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/pop_img"
-            android:layout_width="280dp"
-            android:layout_height="190dp"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
             app:riv_corner_radius="14dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/profile"/>
-        <TextView
-            android:id="@+id/pop_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_bold"
-            android:text="Popular Products"
-            android:textSize="19sp" />
-            <TextView
-                android:id="@+id/pop_des"
-                android:layout_width="190dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/lato"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:text="description"/>
+            android:elevation="0dp"
+            android:src="@drawable/profile"
+            android:background="@drawable/linear_shadow_popular"
+            />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
             <ImageView
-                android:layout_width="70dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ratingbar"
-                android:layout_marginLeft="-5dp"/>
-            <TextView
-                android:id="@+id/pop_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:text="5.0"
-                android:layout_weight="1"
-                android:fontFamily="@font/lato_bold"/>
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/pop_heart"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/pop_discount"
+                android:id="@+id/pop_cost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:text="Discount 20% Off"
-                android:textColor="@color/black"
-                android:gravity="end"
-                android:fontFamily="@font/lato_bold"/>
-        </LinearLayout>
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="52dp"
+                android:background="@drawable/linear_shadow_small_frame"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingStart="6dp"
+                android:paddingTop="2dp"
+                android:paddingEnd="6dp"
+                android:paddingBottom="2dp"
+                android:text="727"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
+            <TextView
+                android:id="@+id/pop_name"
+                android:layout_width="141dp"
+                android:layout_height="21dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="32dp"
+                android:fontFamily="@font/lato_bold"
+                android:gravity="left"
+                android:inputType="textShortMessage"
+                android:maxLines="1"
+                android:text="Popular Products"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/pop_des"
+                android:layout_width="140dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/lato"
+                android:gravity="left"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="Description"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
