--- a/app/src/main/res/layout/recommended_item.xml
+++ b/app/src/main/res/layout/recommended_item.xml
@@ -1,59 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="3dp"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    app:cardCornerRadius="15dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
-        <ImageView
+    <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="250dp"
+        android:orientation="vertical">
+
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/rec_img"
             android:layout_width="200dp"
-            android:layout_height="145dp"
-            android:src="@mipmap/offers3"/>
+            android:layout_height="250dp"
+            app:riv_corner_radius="14dp"
+            android:scaleType="centerCrop"
+            android:elevation="0dp"
+            android:src="@drawable/profile"
+            android:background="@drawable/linear_shadow_popular"
+            />
 
-        <TextView
-            android:id="@+id/rec_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Product Name"
-            android:textSize="19sp"
-            android:fontFamily="@font/lato"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/rec_dec"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:text="description"/>
-
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
             <ImageView
-                android:layout_marginLeft="-5dp"
-                android:layout_width="70dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ratingbar"/>
-            <TextView
-                android:id="@+id/rec_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5.0"
-                android:layout_weight="1"
-                android:layout_marginTop="3dp"/>
-        </LinearLayout>
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/pop_heart"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/pop_cost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="52dp"
+                android:background="@drawable/linear_shadow_small_frame"
+                android:fontFamily="@font/lato"
+                android:gravity="center"
+                android:paddingStart="6dp"
+                android:paddingTop="2dp"
+                android:paddingEnd="6dp"
+                android:paddingBottom="2dp"
+                android:text="727"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/rec_name"
+                android:layout_width="141dp"
+                android:layout_height="21dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="32dp"
+                android:fontFamily="@font/lato_bold"
+                android:gravity="left"
+                android:inputType="textShortMessage"
+                android:maxLines="1"
+                android:text="Popular Products"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/rec_des"
+                android:layout_width="140dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/lato"
+                android:gravity="left"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="Description"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
