--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,8 @@
         <item name="android:layout_width">56dp</item>
         <item name="android:layout_height">56dp</item>
     </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name = "android:windowBackground">@drawable/splashscreen</item>
+    </style>
 </resources>
