--- a/app/src/main/res/drawable/minus.xml
+++ b/app/src/main/res/drawable/minus.xml
@@ -6,12 +6,17 @@
     android:viewportHeight="24">
     <path
         android:name="top"
+        android:strokeColor="@color/our_black"
         android:fillColor="@color/our_black"
-        android:pathData="M 16.457 3.666 L 18.589 5.645 L 7.703 17.39 L 5.571 15.414 Z"
+        android:pathData="M 2.666 3.333 L 3.333 2.666 L 21.333 20.666 L 20.666 21.333 Z"
         android:strokeWidth="0.1" />
     <path
         android:name="bottom"
         android:fillColor="@color/our_black"
-        android:pathData="M 5.548 5.672 L 7.674 3.687 L 18.612 15.384 L 16.489 17.369 Z"
-        android:strokeWidth="0.1" />
+        android:strokeColor="@color/our_black"
+        android:pathData="M 3.333 21.333 L 2.666 20.666 L 20.666 2.666 L 21.333 3.333 Z"
+        android:strokeWidth="0.1"/>
+
 </vector>
+
+
