--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -12,16 +12,26 @@
         android:layout_height="250dp"
         android:orientation="vertical">
 
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/pop_img"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
-            app:riv_corner_radius="14dp"
-            android:scaleType="centerCrop"
-            android:elevation="0dp"
-            android:src="@drawable/profile"
-            android:background="@drawable/linear_shadow_popular"
-            />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/pop_img"
+                android:layout_width="200dp"
+                android:layout_height="250dp"
+                android:elevation="0dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/profile"
+                app:riv_corner_radius="14dp" />
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="250dp"
+                android:contentDescription="TODO"
+                android:background="@drawable/linear_shadow_popular"
+                android:elevation="2dp" />
+        </FrameLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
