--- a/app/src/main/res/layout/view_all_item.xml
+++ b/app/src/main/res/layout/view_all_item.xml
@@ -1,107 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="3dp"
-    android:layout_margin="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/view_img"
-            android:scaleType="centerCrop"
-            android:src="@drawable/profile"
-            android:layout_width="150dp"
-            android:layout_height="150dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="30dp"
+        android:layout_margin="30dp"
+        app:cardElevation="20dp"
+        >
+
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="344dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:orientation="vertical">
+            android:background="@android:color/transparent"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/view_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:fontFamily="@font/lato"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:text="Name"
-                android:textSize="20dp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:fontFamily="@font/lato"
-                android:id="@+id/view_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Description"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:singleLine="false" />
-            
-            <LinearLayout
-                android:layout_marginTop="10dp"
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/view_img"
+                android:layout_width="145dp"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@color/our_black"
+                app:riv_corner_radius_bottom_left="25dp"
+                app:riv_corner_radius_top_left="25dp" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical">
 
                 <TextView
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/lato"
+                    android:id="@+id/view_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Price $"/>
+                    android:layout_marginTop="10dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/lato_bold"
+                    android:maxLines="1"
+                    android:padding="2dp"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:singleLine="true"
+                    android:text="Name"
+                    android:textColor="@color/our_black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/view_description"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/lato"
+                    android:gravity="start"
+                    android:maxLines="5"
+                    android:singleLine="false"
+                    android:text="Description"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/view_name" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="140dp"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:src="@drawable/ratingbar"
+                    app:layout_constraintBottom_toTopOf="@+id/view_price"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+
+                <TextView
+                    android:id="@+id/view_rating"
+                    android:layout_width="29dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="45dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/lato_bold"
+                    android:gravity="center_vertical"
+                    android:text="(56)"
+                    android:textColor="@color/our_black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView6"
+                    tools:ignore="MissingConstraints" />
 
                 <TextView
                     android:id="@+id/view_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="75dp"
+                    android:layout_height="29dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginBottom="15dp"
+                    android:background="@drawable/ic_linear_backgroud_price"
                     android:fontFamily="@font/lato"
-                    android:text="30"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:gravity="center"
+                    android:paddingStart="6dp"
+                    android:paddingTop="2dp"
+                    android:paddingEnd="6dp"
+                    android:paddingBottom="2dp"
+                    android:text="300 tg"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_marginLeft="-5dp"
-                    android:layout_width="70dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ratingbar"/>
-                <TextView
-                    android:id="@+id/view_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5.0"
-                    android:layout_weight="1"
-                    android:layout_marginTop="3dp"/>
-
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
-                android:layout_gravity="end"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="5dp" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
