--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,15 @@
         android:id="@+id/nav_home"
         android:name="com.example.artsell.fragments.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_my_orders"
+            app:destination="@id/nav_my_orders"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_profile"
@@ -17,6 +25,13 @@
         android:label="@string/profile"
         tools:layout="@layout/fragment_profile" />
 
+    <fragment
+        android:id="@+id/nav_chat"
+        android:name="com.example.artsell.fragments.ChatsFragment"
+        android:label="@string/fragment_chat"
+        tools:layout="@layout/fragment_chats"
+
+        />
     <fragment
         android:id="@+id/nav_category"
         android:name="com.example.artsell.fragments.CategoryFragment"
@@ -41,5 +56,13 @@
         android:id="@+id/nav_my_orders"
         android:name="com.example.artsell.fragments.MyOrdersFragment"
         android:label="@string/my_orders"
-        tools:layout="@layout/fragment_my_orders" />
+        tools:layout="@layout/fragment_my_orders" >
+        <action
+            android:id="@+id/action_nav_my_orders_to_nav_chat"
+            app:destination="@id/nav_chat"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
 </navigation>
