--- a/app/src/main/res/drawable/ic_baseline_shopping_cart_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_shopping_cart_24.xml
@@ -1,5 +1,32 @@
-<vector android:height="24dp" android:tint="#C4C6B7"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M7,18c-1.1,0 -1.99,0.9 -1.99,2S5.9,22 7,22s2,-0.9 2,-2 -0.9,-2 -2,-2zM1,2v2h2l3.6,7.59 -1.35,2.45c-0.16,0.28 -0.25,0.61 -0.25,0.96 0,1.1 0.9,2 2,2h12v-2L7.42,15c-0.14,0 -0.25,-0.11 -0.25,-0.25l0.03,-0.12 0.9,-1.63h7.45c0.75,0 1.41,-0.41 1.75,-1.03l3.58,-6.49c0.08,-0.14 0.12,-0.31 0.12,-0.48 0,-0.55 -0.45,-1 -1,-1L5.21,4l-0.94,-2L1,2zM17,18c-1.1,0 -1.99,0.9 -1.99,2s0.89,2 1.99,2 2,-0.9 2,-2 -0.9,-2 -2,-2z"/>
+<?xml version="1.0" encoding="utf-8"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="30dp"
+    android:height="30dp"
+    android:viewportWidth="30"
+    android:viewportHeight="30">
+
+    <path
+        android:strokeColor="@color/our_black"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:pathData="M21.25 25C21.25 24.3096 21.8096 23.75 22.5 23.75C23.1904 23.75 23.75 24.3096 23.75 25C23.75 25.6904 23.1904 26.25 22.5 26.25C21.8096 26.25 21.25 25.6904 21.25 25Z" />
+    <path
+        android:strokeColor="@color/our_black"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:pathData="M8.75 25C8.75 24.3096 9.30964 23.75 10 23.75C10.6904 23.75 11.25 24.3096 11.25 25C11.25 25.6904 10.6904 26.25 10 26.25C9.30964 26.25 8.75 25.6904 8.75 25Z" />
+    <path
+        android:strokeColor="@color/our_black"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:pathData="M3.75 3.75H4.70965C5.31248 3.75 5.82943 4.18025 5.93887 4.77307L8.75 20" />
+    <path
+        android:strokeColor="@color/our_black"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:pathData="M6.875 7.5H24.6787C25.4825 7.5 26.0774 8.2478 25.8967 9.03107L23.589 19.0311C23.4581 19.5982 22.9531 20 22.371 20H8.75" />
 </vector>
