--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,21 @@
     >
 
     <RelativeLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="0dp"
-        android:id="@+id/drawer_layout"
-        tools:context=".activities.MainActivity">
+        tools:context=".activities.MainActivity"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
+
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
+
             android:layout_height="71dp"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="0dp"
             android:background="@drawable/rounded_corner"
             android:elevation="0dp"
             app:itemIconSize="36dp"
@@ -33,9 +37,9 @@
             app:menu="@menu/bottom_navmenu" />
 
         <FrameLayout
-            android:background="@color/black"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +47,48 @@
 
         </FrameLayout>
     </RelativeLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/btns"
+        android:visibility="gone"
+
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="80dp"
+        android:background="@drawable/ic_btn_switcher"
+        app:layout_constraintBottom_toBottomOf="@+id/drawer_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_market"
+
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/ic_btn_market"
+            android:elevation="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_order"
+
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/ic_btn_order"
+            android:elevation="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ImageButton
         android:id="@+id/fabMenu"
         android:background="@android:color/transparent"
@@ -56,6 +102,42 @@
         android:scaleY="1.7"
         android:contentDescription="@null"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/nav_ask"
+        android:backgroundTint="@color/colorPrimary"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:scaleType="center"
+        app:fabCustomSize="60dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="16dp"
+        android:elevation="0dp"
+        android:src="@drawable/ic_baseline_help_24"
+        android:visibility="invisible"
+        app:elevation="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/nav_my_carts"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/nav_my_carts"
+        android:backgroundTint="@color/colorPrimary"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:scaleType="center"
+        app:fabCustomSize="60dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="16dp"
+        android:elevation="0dp"
+        android:src="@drawable/plus"
+        android:visibility="invisible"
+        app:elevation="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/nav_profile"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
 
@@ -76,74 +158,5 @@
         app:layout_constraintBottom_toTopOf="@+id/fabMenu"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/nav_category"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:scaleType="center"
-        app:fabCustomSize="60dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginBottom="16dp"
-        android:elevation="0dp"
-        android:src="@drawable/ic_baseline_category_24"
-        android:visibility="invisible"
-        app:elevation="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/nav_profile"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/nav_offers"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:scaleType="center"
-        app:fabCustomSize="60dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginBottom="16dp"
-        android:elevation="0dp"
-        android:src="@drawable/ic_baseline_local_offer_24"
-        android:visibility="invisible"
-        app:elevation="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/nav_category"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/nav_new_products"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:scaleType="center"
-        app:fabCustomSize="60dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginBottom="16dp"
-        android:elevation="0dp"
-        android:src="@drawable/ic_facebook"
-        android:visibility="invisible"
-        app:elevation="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/nav_offers"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/nav_my_carts"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:scaleType="center"
-        app:fabCustomSize="60dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginBottom="16dp"
-        android:elevation="0dp"
-        android:src="@drawable/ic_baseline_shopping_cart_24"
-        android:visibility="invisible"
-        app:elevation="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/nav_new_products"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
