--- a/app/src/main/res/layout/view_all_item.xml
+++ b/app/src/main/res/layout/view_all_item.xml
@@ -8,7 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="30dp"
-        android:layout_margin="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="15dp"
         app:cardElevation="20dp"
         >
 
