--- a/app/src/main/res/menu/bottom_navmenu.xml
+++ b/app/src/main/res/menu/bottom_navmenu.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_home"
         />
     <item
-        android:id="@+id/nav_my_orders"
+        android:id="@+id/nav_market"
         android:title="Orders"
         android:icon="@drawable/ic_market"/>
     <item
