--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,8 +11,8 @@
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_nav_home_to_nav_my_orders"
-            app:destination="@id/nav_my_orders"
+            android:id="@+id/action_nav_home_to_nav_market"
+            app:destination="@id/nav_market"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -38,27 +38,17 @@
         android:label="@string/category"
         tools:layout="@layout/fragment_category" />
     <fragment
-        android:id="@+id/nav_offers"
-        android:name="com.example.artsell.fragments.OffersFragment"
-        android:label="@string/offers"
-        tools:layout="@layout/fragment_offers" />
-    <fragment
-        android:id="@+id/nav_new_products"
-        android:name="com.example.artsell.fragments.NewProductsFragment"
-        android:label="@string/new_products"
-        tools:layout="@layout/fragment_new_products" />
-    <fragment
         android:id="@id/nav_my_carts"
         android:name="com.example.artsell.fragments.MyCartsFragment"
         android:label="@string/my_carts"
         tools:layout="@layout/fragment_my_carts" />
     <fragment
-        android:id="@+id/nav_my_orders"
-        android:name="com.example.artsell.fragments.MyOrdersFragment"
+        android:id="@+id/nav_market"
+        android:name="com.example.artsell.fragments.MarketFragment"
         android:label="@string/my_orders"
-        tools:layout="@layout/fragment_my_orders" >
+        tools:layout="@layout/fragment_market" >
         <action
-            android:id="@+id/action_nav_my_orders_to_nav_chat"
+            android:id="@+id/action_nav_market_to_nav_chat"
             app:destination="@id/nav_chat"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
